<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:textAlignment="center">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:paddingTop="30dp"
        android:text="@string/DK"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:text="Special thanks: "
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/LukaToplak"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/Icon"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="100dp">

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.99" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.99"
            android:text="@string/theuser"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_navbar_fav" />

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.99" />
    </LinearLayout>

</LinearLayout>